--- a/client/css/style.css
+++ b/client/css/style.css
@@ -30,24 +30,49 @@ md-toolbar.custom a:hover {
 }
 
 /***********************************************/
-/*           footer                            */
-/***********************************************/
-
-footer {
-    background-color: rgb(63, 81, 181);
-    color: white;
-}
-
-footer a {
-    color: white;
-}
-
-/***********************************************/
 /*           table                             */
 /***********************************************/
 img.flag {
     padding: 2px 4px;
     width: 30px;
+}
+
+.overview-table{
+    overflow: visible;
+}
+
+/***********************************************/
+/*           details                           */
+/***********************************************/
+
+.subheader {
+    font-size: 20px;
+    font-weight: 300;
+    padding-left: 20px;
+    margin-top: -15px;
+}
+
+.description {
+    box-shadow: 1px 1px 5px rgb(170, 170, 170);
+    padding: 10px;
+}
+
+.description > .subheader {
+    margin: 0;
+    font-size: 20px;
+}
+
+.description > p {
+    padding: 0 5px;
+}
+
+.contact > p {
+    border-bottom: 1px solid rgb(204, 204, 204);
+    padding-bottom: 5px;
+}
+
+.info > span {
+    display: block;
 }
 
 /***********************************************/
@@ -66,15 +91,12 @@ img.flag {
     background-color: #FFFFFF;
 }
 
-/* home */
 .semester-span {
     border-bottom: 2px solid #FF4081;
     cursor: pointer;
-    /* remove dotted border onclick event */
     outline: 0;
 }
 
-/* overview */
 .delete-btn {
     min-width: 0px;
     position: absolute;
@@ -167,36 +189,4 @@ a:hover {
     -ms-hyphens: auto;
     -moz-hyphens: auto;
     -webkit-hyphens: auto;
-}
-
-/* details */
-.subheader {
-    font-size: 20px;
-    font-weight: 300;
-    padding-left: 20px;
-    margin-top: -15px;
-}
-
-.description {
-    /*margin: 50px auto;*/
-    box-shadow: 1px 1px 5px rgb(170, 170, 170);
-    padding: 10px;
-}
-
-.description > .subheader {
-    margin: 0;
-    font-size: 20px;
-}
-
-.description > p {
-    padding: 0 5px;
-}
-
-.contact > p {
-    border-bottom: 1px solid rgb(204, 204, 204);
-    padding-bottom: 5px;
-}
-
-.info > span {
-    display: block;
 }
