--- a/client/templates/app.html
+++ b/client/templates/app.html
@@ -7,20 +7,14 @@
             <div class="md-toolbar-tools">
                 <h1 class="logo" ng-click="goHome()">RWTH Courses</h1>
                 <span flex></span>
-                <md-button>Button</md-button>
+                <div ng-show="close" class="icon-ctn" xmlns="http://www.w3.org/1999/html">
+                    <md-icon ng-click="closeDetails()" md-svg-src='img/icons/ic_clear_white_36px.svg'></md-icon>
+                </div>
             </div>
         </md-toolbar>
     </header>
 
     <!-- main content -->
     <main ng-view ng-cloak flex layout="column" layout-padding></main>
-
-     <!--footer-->
-    <!--<footer>-->
-        <!--<div layout="row" layout-align="center center">-->
-            <!--<p>Coded with <3 by Group 123 - See on <a-->
-                    <!--href="https://github.com/WebTech2-Group123/rwth-courses">GitHub</a></p>-->
-        <!--</div>-->
-    <!--</footer>-->
 
 </div>
