--- a/client/templates/app.html
+++ b/client/templates/app.html
@@ -15,6 +15,6 @@
     </header>
 
     <!-- main content -->
-    <main ng-view ng-cloak flex layout="column" layout-padding></main>
+    <main ng-view ng-cloak layout="column" layout-padding></main>
 
 </div>
