--- a/client/templates/details.html
+++ b/client/templates/details.html
@@ -5,7 +5,7 @@
 <!-- first row -->
 
 <!-- info box -->
-<div layout="row" layout-xs="column" layout-margin>
+<div class="no-margin no-padding" layout="row" layout-xs="column" layout-margin>
     <div flex="33" flex-xs="100" class="description">
         <h2 class="subheader">Info</h2>
 
@@ -31,7 +31,7 @@
 </div>
 
 <!-- second row -->
-<div layout="row" layout-xs="column" layout-margin ng-show="showDescriptionDe()">
+<div class="no-margin no-padding" layout="row" layout-xs="column" layout-margin ng-show="showDescriptionDe()">
     <div flex="50" flex-xs="100" class="description">
         <h2 class="subheader">Beschreibung</h2>
 
