--- a/client/templates/details.html
+++ b/client/templates/details.html
@@ -1,4 +1,4 @@
-<h2>{{ course.name }} ({{ course.semester }}) <span ng-bind-html="course.language | languages"></span></h2>
+<h2>{{ course.name }} ({{ course.semester }}) <span ng-show="course.language != 'UNKNOWN'" ng-bind-html="course.language | languages"></span></h2>
 <h2 class="subheader" ng-show="showNameDe()">{{ course.name_de }}</h2>
 
 
@@ -73,7 +73,7 @@
 <div class="description" layout="column" layout-margin>
     <h2 class="subheader">Address</h2>
 
-    <div layout="row" layout-margin layout-wrap layout-align="center center">
+    <div layout="row" layout-margin layout-wrap>
         <div flex="45" flex-xs="100" class="contact description" ng-repeat="contact in course.contact">
             <p>{{ contact.name }}</p>
             <span>{{ contact.address.department }}</span><br ng-show="showItem(contact.address.department)">
