--- a/client/css/style.css
+++ b/client/css/style.css
@@ -100,6 +100,14 @@ img.flag {
     margin: 0 auto;
 }
 
+.rwth-logo {
+    outline: none;
+}
+
+.rwth-logo > img {
+    width: 300px;
+}
+
 .bottom-navigation {
     position: fixed;
     bottom: 0;
