Replace logo with button£

--- a/client/templates/courses.html
+++ b/client/templates/courses.html
@@ -40,7 +40,7 @@
                 <th md-column md-order-by="name"><span>Name</span></th>
                 <th md-column md-order-by="type">Type</th>
                 <th md-column md-order-by="language">Language</th>
-                <th md-column md-order-by="ects" md-numeric>ECTS</th>
+                <th md-column md-order-by="ects">ECTS</th>
                 <th md-column md-order-by="contact"><span>Lecturer</span></th>
                 <th md-column md-order-by="units">Unit</th>
             </tr>
