--- a/client/templates/courses.html
+++ b/client/templates/courses.html
@@ -49,9 +49,8 @@
             <!--table body-->
             <tbody md-body>
             <tr md-row md-select="course.gguid" md-select-id="{{course.gguid}}"
-                ng-repeat="course in courses | orderBy: table.order |
-                filterBy: ['name', 'lecturer.name', 'ects']: search |
-                filter: languageFilter | filter: typeFilter |
+                ng-repeat="course in filtered = (courses  | orderBy: table.order |
+                filterBy: ['name', 'lecturer.name', 'ects']: search | filter: languageFilter | filter: typeFilter) |
                 limitTo: table.limit: (table.page - 1) * table.limit">
                 <td md-cell>
                     <a ng-click="showDetails(course.gguid)">
@@ -78,7 +77,7 @@
     </md-table-container>
 
     <!--table pagination -->
-    <md-table-pagination md-limit="table.limit" md-page="table.page" md-total="{{ courses.length }}"
+    <md-table-pagination md-limit="table.limit" md-page="table.page" md-total="{{ filtered.length }}"
                          md-page-select md-options="[10, 15, 20, 40, 60, 80, 100]"></md-table-pagination>
 
     <!--buttons -->
