FIX go to campus, overview

--- a/client/templates/app.html
+++ b/client/templates/app.html
@@ -7,7 +7,7 @@
             <div class="md-toolbar-tools">
                 <h1 class="logo" ng-click="goHome()">RWTH Courses</h1>
                 <span flex></span>
-                <md-button ng-click="goToCampus()">
+                <md-button ng-show="close" ng-click="goToCampus()">
                     <md-tooltip md-direction="bottom">Switch to Campus Office</md-tooltip>
                     See in Campus
                 </md-button>
