--- a/client/css/desktop/home.css
+++ b/client/css/desktop/home.css
@@ -6,5 +6,15 @@
 }
 
 .title {
+    font-weight: 200;
+    font-size: 36pt;
+    color: #FFFFFF;
+    opacity: 0.8;
+}
 
+.subtitle {
+    font-size: 14pt;
+    color: #FFFFFF;
+    line-height: 38px;
+    opacity: 0.8;
 }
