--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -1,4 +1,6 @@
-<div layout="row" layout-align="center center">
+<loading></loading>
+<div layout="row" layout-align="center center" ng-show="!loading">
+
     <div flex="66" flex-xs="100">
         <h2>What do you study?</h2>
 
@@ -15,8 +17,10 @@
             </md-not-found>
         </md-autocomplete>
 
-        <p>Searching for courses in <span class="semester-span" ng-click="changeSemester()">{{ currentSemester }}</span></p>
-
+        <p>
+            Searching for courses in
+            <span class="semester-span" ng-click="changeSemester()">{{ currentSemester }}</span>
+        </p>
 
         <md-button class="md-raised" ng-click="getCourseList(currentSemester, searchText)">Search</md-button>
     </div>
