--- a/client/css/style.css
+++ b/client/css/style.css
@@ -9,6 +9,14 @@ app > #loading {
 }
 
 /***********************************************/
+/*           home                              */
+/***********************************************/
+.body-home {
+    background-color:#4874B9;
+    background-image:linear-gradient(to bottom right,#4874B9,#4451B9);
+}
+
+/***********************************************/
 /*           custom navbar                     */
 /***********************************************/
 .logo {
