--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -8,10 +8,10 @@
 
 <!-- search -->
 <div flex layout="row" layout-align="center center" layout-padding>
-    <div flex="66" flex-xs="100">
+    <div flex="66" flex-xs="100" flex-xl="50">
 
         <md-autocomplete md-selected-item="selectedItem" md-search-text="searchText"
-                         md-item-text="field" placeholder="My Amazing Study Field..." md-min-length="0"
+                         md-item-text="field" placeholder="Enter your Field of Study..." md-min-length="0"
                          md-items="field in querySearch(searchText)">
 
             <md-item-template>
