--- a/client/templates/app.html
+++ b/client/templates/app.html
@@ -1,5 +1,5 @@
 <!-- home page -->
-<div ng-if="home" flex layout="column" layout-align="center" layout-fill class="body-home">
+<div ng-if="home" flex layout="column" layout-align="center" layout-fill class="home">
     <div ng-include="'templates/home.html'" ng-controller="HomeCtrl" layout="column"></div>
 </div>
 
