--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -9,7 +9,9 @@
 
 
     <!-- search -->
-    <div flex layout="row" layout-align="center center" layout-padding>
+    <div flex layout="row" layout-align="center center" layout-padding
+         ng-enter="getCourseList(currentSemester, searchText)">
+
         <div flex="66" flex-xs="100" flex-xl="50">
 
 
