Refactor loading spinner

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -8,6 +8,10 @@ app > #loading {
     left: 50%;
 }
 
+.loading {
+    height: 70vh;
+}
+
 /***********************************************/
 /*           home                              */
 /***********************************************/
