--- a/client/templates/courses.html
+++ b/client/templates/courses.html
@@ -23,16 +23,16 @@
         <!--language-->
         <md-input-container flex flex-offset="5">
             <b>Language:</b>
-            <md-checkbox ng-model="languages.en">
+            <md-checkbox ng-model="languages.en" aria-label="English">
                 <img class="flag" src="img/flags/en.png" alt="English">
             </md-checkbox>
-            <md-checkbox ng-model="languages.de">
+            <md-checkbox ng-model="languages.de" aria-label="German">
                 <img class="flag" src="img/flags/de.png" alt="German">
             </md-checkbox>
-            <md-checkbox ng-model="languages.other">
+            <md-checkbox ng-model="languages.other" aria-label="Others">
                 <img class="flag" src="img/flags/other.png" alt="Others">
             </md-checkbox>
-            <md-checkbox ng-model="languages.unknown">
+            <md-checkbox ng-model="languages.unknown" aria-label="Unknown">
                 <img class="flag" src="img/flags/unknown.png" alt="Unknown">
             </md-checkbox>
         </md-input-container>
