--- a/client/templates/details.html
+++ b/client/templates/details.html
@@ -1,16 +1,16 @@
 <!-- header -->
 <header>
-    <md-toolbar class="md-medium-tall custom">
-        <div class="md-toolbar-tools">
-            <div class="icon-ctn" xmlns="http://www.w3.org/1999/html">
-                <md-icon ng-click="closeDetails()" md-svg-src='img/icons/ic_arrow_back_white_48px.svg'></md-icon>
-            </div>
-            <h2>{{ course.name }} ({{ course.semester }})</h2>
-            <span ng-show="course.language != 'UNKNOWN'"
-                  ng-bind-html="course.language | languages"
-                  class="img-ctn"></span>
-        </div>
-    </md-toolbar>
+    <!--<md-toolbar class="md-medium-tall custom">-->
+        <!--<div class="md-toolbar-tools">-->
+            <!--<div class="icon-ctn" xmlns="http://www.w3.org/1999/html">-->
+                <!--<md-icon ng-click="closeDetails()" md-svg-src='img/icons/ic_arrow_back_white_48px.svg'></md-icon>-->
+            <!--</div>-->
+            <!--<h2>{{ course.name }} ({{ course.semester }})</h2>-->
+            <!--<span ng-show="course.language != 'UNKNOWN'"-->
+                  <!--ng-bind-html="course.language | languages"-->
+                  <!--class="img-ctn"></span>-->
+        <!--</div>-->
+    <!--</md-toolbar>-->
 </header>
 
 <!--<h2>{{ course.name }} ({{ course.semester }}) <span ng-show="course.language != 'UNKNOWN'" ng-bind-html="course.language | languages"></span></h2>-->
