--- a/client/templates/overview.html
+++ b/client/templates/overview.html
@@ -1,6 +1,6 @@
 <h2>Schedule</h2>
 
-<md-table-container class="overview-table">
+<md-table-container class="overview-table margin">
     <table md-table>
         <thead md-head>
         <tr md-row>
@@ -51,4 +51,7 @@
     </md-list-item>
 </md-list>
 
-<md-button class="md-raised" ng-click="goBack()">Course list</md-button>
+<!-- schedule button -->
+<md-button id="list" class="md-fab" aria-label="Courses list" ng-click="goBack()">
+    <md-icon md-svg-src="img/icons/ic_view_list_white_24px.svg"></md-icon>
+</md-button>
