--- a/client/templates/app.html
+++ b/client/templates/app.html
@@ -7,6 +7,6 @@
 <div ng-hide="home">
 
     <!-- main content -->
-    <main ng-view ng-cloak layout="column" layout-padding></main>
+    <main ng-view ng-cloak layout="column"></main>
 
 </div>
