--- a/client/templates/courses.html
+++ b/client/templates/courses.html
@@ -1,7 +1,7 @@
 <!-- header -->
 <header></header>
 <loading></loading>
-<div ng-show="!loading" class="margin">
+<div ng-show="!loading" class="margin" layout-padding>
 
     <div layout-align="space-between center" layout="column" layout-gt-sm="row">
 
