--- a/client/templates/overview.html
+++ b/client/templates/overview.html
@@ -1,55 +1,60 @@
-<h2>Schedule</h2>
+<div layout-padding>
+    <h2>Schedule</h2>
 
-<md-table-container class="overview-table margin">
-    <table md-table>
-        <thead md-head>
-        <tr md-row>
-            <th md-column>Time</th>
-            <th md-column>Monday</th>
-            <th md-column>Tuesday</th>
-            <th md-column>Wednesday</th>
-            <th md-column>Thursday</th>
-            <th md-column>Friday</th>
-            <th md-column>Saturday</th>
-        </tr>
-        </thead>
-        <tbody md-body>
-        <tr md-row ng-repeat="items in schedule track by $index">
-            <td md-cell>{{ times[$index] }}</td>
-            <td md-cell ng-repeat="events in items track by $index" class="no-padding">
-                <div layout="row">
-                    <div class="event-ctn" flex ng-repeat="event in events track by $index">
-                        <div class="event"
-                             ng-class="{'event-offset-15': event.offset.quarterpast,'event-offset-30': event.offset.halfpast,'event-offset-45': event.offset.quarterto, 'event-border' : event.css}">
-                            <div class="overview-name-ctn">
-                                <a ng-click="goToDetails(event.gguid)">
-                                    <md-tooltip md-direction="left">Show details</md-tooltip>
-                                    {{ event.name | length: 30 }}
-                                </a>
+    <md-table-container class="overview-table margin">
+        <table md-table>
+            <thead md-head>
+            <tr md-row>
+                <th md-column>Time</th>
+                <th md-column>Monday</th>
+                <th md-column>Tuesday</th>
+                <th md-column>Wednesday</th>
+                <th md-column>Thursday</th>
+                <th md-column>Friday</th>
+                <th md-column>Saturday</th>
+            </tr>
+            </thead>
+            <tbody md-body>
+            <tr md-row ng-repeat="items in schedule track by $index">
+                <td md-cell>{{ times[$index] }}</td>
+                <td md-cell ng-repeat="events in items track by $index" class="no-padding">
+                    <div layout="row">
+                        <div class="event-ctn" flex ng-repeat="event in events track by $index">
+                            <div class="event"
+                                 ng-class="{'event-offset-15': event.offset.quarterpast,'event-offset-30': event.offset.halfpast,'event-offset-45': event.offset.quarterto, 'event-border' : event.css}">
+                                <div class="overview-name-ctn">
+                                    <a ng-click="goToDetails(event.gguid)">
+                                        <md-tooltip md-direction="left">Show details</md-tooltip>
+                                        {{ event.name | length: 30 }}
+                                    </a>
+                                </div>
+                                <md-button class="delete-btn" ng-click="deleteCourse(event.gguid)"
+                                           ng-class="{'delete-btn-offset-15': event.offset.quarterpast, 'delete-btn-offset-30': event.offset.halfpast}">
+                                    <md-tooltip md-direction="bottom">Delete course</md-tooltip>
+                                    <md-icon md-svg-src='img/icons/ic_delete_black_18px.svg'></md-icon>
+                                </md-button>
                             </div>
-                            <md-button class="delete-btn" ng-click="deleteCourse(event.gguid)" ng-class="{'delete-btn-offset-15': event.offset.quarterpast, 'delete-btn-offset-30': event.offset.halfpast}">
-                                <md-tooltip md-direction="bottom">Delete course</md-tooltip>
-                                <md-icon md-svg-src='img/icons/ic_delete_black_18px.svg'></md-icon>
-                            </md-button>
                         </div>
                     </div>
-                </div>
-            </td>
-        </tr>
-        </tbody>
-    </table>
-</md-table-container>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </md-table-container>
 
-<md-list class="unscheduled-ctn" ng-show="showUnscheduled()">
-    <md-subheader class="md-no-sticky">These events are not displayed in the schedule</md-subheader>
-    <md-list-item ng-repeat="event in unscheduled track by $index">
-        <p>{{ event.name }} <span ng-show="event.events[0].weekday">|</span> {{ event.events[0].weekday | week }} {{ event.events[0].start | time }}</p>
-        <md-button class="delete-btn" ng-click="deleteCourse(event.gguid)">
-            <md-tooltip md-direction="bottom">Delete course</md-tooltip>
-            <md-icon md-svg-src='img/icons/ic_delete_black_18px.svg'></md-icon>
-        </md-button>
-    </md-list-item>
-</md-list>
+    <md-list class="unscheduled-ctn" ng-show="showUnscheduled()">
+        <md-subheader class="md-no-sticky">These events are not displayed in the schedule</md-subheader>
+        <md-list-item ng-repeat="event in unscheduled track by $index">
+            <p>{{ event.name }} <span ng-show="event.events[0].weekday">|</span> {{ event.events[0].weekday | week }} {{
+                event.events[0].start | time }}</p>
+            <md-button class="delete-btn" ng-click="deleteCourse(event.gguid)">
+                <md-tooltip md-direction="bottom">Delete course</md-tooltip>
+                <md-icon md-svg-src='img/icons/ic_delete_black_18px.svg'></md-icon>
+            </md-button>
+        </md-list-item>
+    </md-list>
+
+</div>
 
 <!-- schedule button -->
 <md-button id="list" class="md-fab" aria-label="Courses list" ng-click="goBack()">
