Missing back button on schedule

--- a/client/templates/overview.html
+++ b/client/templates/overview.html
@@ -1,6 +1,6 @@
-<div layout-padding>
-    <h2>Schedule</h2>
+<header></header>
 
+<div layout-padding>
     <md-table-container class="overview-table margin">
         <table md-table>
             <thead md-head>
