--- a/client/templates/details.html
+++ b/client/templates/details.html
@@ -24,7 +24,7 @@
         </p>
 
         <p>
-            Typ: <span>{{ course.type | join: ' & ' }}</span>
+            Type: <span>{{ course.type | join: ' & ' }}</span>
         </p>
 
         <p>
